results/pipeline/humaneval/openai/test_scripts/HumanEval-73_4.out
Error running code: unterminated string literal (detected at line 5) (<string>, line 5)
